JPA implemented